--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,6 +22,7 @@ jobs:
           echo "SOURCE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
       - name: Build docs website
         run: |
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
           make build-docs-website
       - name: Deploy all docs
         uses: peaceiris/actions-gh-pages@v3
