--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,7 @@ markdown_extensions:
 copyright: Copyright &copy; 2021 Amazon Web Services
 
 plugins:
+  - git-revision-date
   - search
   - macros
 
